Add Find All Customer

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ SERVER_PORT=9000
 
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=go_fiber_postgre
+DB_USER=postgres
 DB_PASS=admin
-DB_NAME=postgres
+DB_NAME=go_fiber_postgre
 DB_TZ=Asia/Jakarta
